--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -57,6 +57,32 @@
         </div>
       </div>
 
+      <!-- Images -->
+      <div class="item item-divider">
+        Photos
+      </div>
+      <div class="row responsive-md">
+        <div>
+          <ul>
+            <li ng-repeat="image in spot.images" style="display: inline;">
+              <img ng-src="{{image.src}}" width="100" height="100" />
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button ng-click="cameraModal()" class="button button-small icon-left ion-camera">Add Photo</button>
+      <br><br>
+      <div class="item item-divider">
+        Notes
+      </div>
+      <label class="item item-input">
+        <textarea placeholder="Notes about this Spot" rows="4" ng-model="spot.properties.notes"></textarea>
+      </label>
+
+      <h4> Things above here need to be moved to the Main or Common tab.</h4>
+      <br>
+      <h4> Things below here need to be moved to the Data tab.</h4>
+
       <div class="row responsive-md">
         <div class="col">
 
@@ -154,6 +180,12 @@
         </div>
       </div>
 
+      <div ng-show="showLinkToNewOrientation">
+        <br>
+        <button ng-click="newOrientation();" class="button button-small icon-left icon ion-link">Add New Orientation</button>
+        <br><br>
+      </div>
+
       <!-- GROUPING -->
       <div ng-show="showGroupFields">
         <!-- Group Relationship Condition -->
@@ -191,6 +223,11 @@
           <div class="item item-divider">
             Group Members
           </div>
+          <div>
+            <br>
+            <button ng-click="addGroupMember();" class="button button-small icon-left icon ion-plus-round">Add a Member to this Group</button>
+            <br><br>
+          </div>
           <ion-list>
             <ion-item ng-repeat="item in groups_selection" href="#/app/spots/{{item.id}}">
               {{item.name}}
@@ -198,33 +235,8 @@
           </ion-list>
         </div>
       </div>
-      <!-- Images -->
-      <div class="item item-divider">
-        Photos
-      </div>
-      <div class="row responsive-md">
-        <div>
-          <ul>
-            <li ng-repeat="image in spot.images" style="display: inline;">
-              <img ng-src="{{image.src}}" width="100" height="100" />
-            </li>
-          </ul>
-        </div>
-      </div>
-      <button ng-click="cameraModal()" class="button button-small icon-left ion-camera">Add Photo</button>
-      <br><br>
-      <div class="item item-divider">
-        Notes
-      </div>
-      <label class="item item-input">
-        <textarea placeholder="Notes about this Spot" rows="4" ng-model="spot.properties.notes"></textarea>
-      </label>
 
-      <div ng-show="showLinkToNewOrientation">
-        <br>
-        <button ng-click="newOrientation();" class="button button-small icon-left icon ion-link">Add New Orientation</button>
-        <br><br>
-      </div>
+      <h4> Things below here need to be moved to the Relations tab.</h4>
 
       <!-- Related Spots -->
       <div ng-show="showLinks">
