some refactor of the linked spots code

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -251,11 +251,11 @@
         <ion-list>
           <ion-item ng-repeat="item in related_spots_selection">
             <a href="#/app/spots/{{item.id}}"> {{item.name}} </a>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <select ng-model="link_condition"
-                    ng-options="condition.text for condition in link_relationship.choices"
-                    ng-change="setLinkRelationship(item, link_condition)"></select>
-            &nbsp;&nbsp; {{ spot.properties.name }}
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ item.relationship }}&nbsp;<b>{{ spot.properties.name }}</b>
+            &nbsp;&nbsp; -- &nbsp;&nbsp; Edit relationship:
+            <select ng-model="relationship"
+                    ng-options="link_relationships.text for link_relationships in link_relationship.choices"
+                    ng-change="setLinkRelationship(item, relationship)"></select>
           </ion-item>
         </ion-list>
       </div>
