--- a/www/templates/modals/linkModal.html
+++ b/www/templates/modals/linkModal.html
@@ -7,7 +7,7 @@
     <ion-checkbox ng-repeat="item in other_spots"
                   ng-value="item"
                   ng-checked="isChecked(item.id)"
-                  ng-click="toggleSelection(item)">
+                  ng-click="toggleSelection(item, 'links_selected', 'links_unselected')">
       {{ item.name }}
     </ion-checkbox>
   </ion-content>
