added Spot Grouping to point, line and polys since a group can be represented by any type of geometry

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -198,7 +198,7 @@
             <br><br>
           </div>
 
-          <!-- GROUPING -->
+          <!-- SPOT GROUPING -->
           <div ng-show="showGroupFields">
             <!-- Group Relationship Condition -->
             <label class="item item-input item-select">
