--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -272,7 +272,7 @@
             <div>
               <ul>
                 <li ng-repeat="image in spot.images" style="display: inline;">
-                  <img ng-src="{{image.src}}" width="100" height="100" />
+                  <a><img ng-src="{{image.src}}" width="100" height="100" ng-click="showImages($index)"  /></a>
                 </li>
               </ul>
             </div>
